2011-07-26  Dimitri Glazkov  <dglazkov@chromium.org>

        Introduce a way to convert between specifier lists and TestConfiguration sets.
        https://bugs.webkit.org/show_bug.cgi?id=65094

        Add TestConfigurationConverter, a facility to convert:
        1) a set of specifiers into a set of TestConfiguration instances;
        2) a set of TestConfiguration instances into a list of sets of specifiers.

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/models/test_configuration.py: Added TestConfigurationConverter.
        * Scripts/webkitpy/layout_tests/models/test_configuration_unittest.py: Added tests for it.

2011-07-26  Alexandru Chiculita  <achicu@adobe.com>

        CSS Regions build bot should build with "--css-regions" and "--css-exclusion" flags
        https://bugs.webkit.org/show_bug.cgi?id=65171

        Added "features" parameter in config.json for "builder" objects. The parameter is optional and must be an array. All the items
        of the array will be passed to the build-webkit script. The items will automatically be prefixed with "--".

        Reviewed by Adam Roben.

        * BuildSlaveSupport/build.webkit.org-config/config.json:
        * BuildSlaveSupport/build.webkit.org-config/master.cfg:

2011-07-26  Chris Rogers  <crogers@google.com>

        Avoid outputting #EOF twice for web audio tests in chromium DRT
        https://bugs.webkit.org/show_bug.cgi?id=65201

        Reviewed by Dirk Pranke.

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::dump):

2011-07-26  Adam Barth  <abarth@webkit.org>

        Windows bots on build.chromium.org can't figure out the head_svn_revision
        https://bugs.webkit.org/show_bug.cgi?id=65156

        Reviewed by Tony Chang.

        This patch is a bit of a guess as to the issue based on the
        investigation in https://bugs.webkit.org/show_bug.cgi?id=65148.  I'm
        not sure whether it will fix the issue, but it seems worth a try.
